@@ -71,6 +71,8 @@
     from Peter).
 * Added new API lxpanel_button_set_label() to change label of button that
     was created using some lxpanel_button_*() API.
+* Added "panel-font-changed" signal to LXPanel to be able follow settings
+    change in font configuration of panel using lxpanel_button_*() API.
 
 0.7.2
 -------------------------------------------------------------------------
